refactor: 修改 BEM 工具方法参数

--- a/docs/src/assets/style/index.scss
+++ b/docs/src/assets/style/index.scss
@@ -134,7 +134,7 @@ blockquote {
     display: flex;
     justify-content: space-between;
 
-    &--item {
+    &-item {
       width: calc(50% - 8px);
     }
 
