--- a/docs/src/components/menu/style.scss
+++ b/docs/src/components/menu/style.scss
@@ -25,7 +25,7 @@
       }
     }
 
-    &--group-title {
+    &-group-title {
       margin-bottom: var(--d-gap-xs);
       font-size: var(--d-font-size-xs) !important;
       color: var(--d-secondary-text-color);
@@ -41,7 +41,7 @@
         color: var(--d-primary);
       }
 
-      &--title {
+      &-title {
         margin-right: var(--d-gap-xs);
         font-size: var(--d-font-size-md);
       }
