--- a/packages/dl-ui/src/upload/style.scss
+++ b/packages/dl-ui/src/upload/style.scss
@@ -17,7 +17,7 @@
       }
     }
 
-    &--icon {
+    &-icon {
       position: absolute;
       top: 50%;
       left: 50%;
@@ -46,7 +46,7 @@
         margin-right: 0;
       }
 
-      &--delete {
+      &-delete {
         position: absolute;
         top: 0;
         right: 0;
