refactor(Calendar): 日历组件重构，交互调整

--- a/packages/dl-common/src/style/normalize.scss
+++ b/packages/dl-common/src/style/normalize.scss
@@ -43,4 +43,8 @@ ul {
   box-sizing: border-box;
   font-size: var(--d-font-size-md);
   line-height: var(--d-line-height-md);
+
+  &::-webkit-scrollbar {
+    width: var(--d-scrollbar-width);
+  }
 }
