docs: 移动端预览样式调整

--- a/docs/src/components/preview/style.scss
+++ b/docs/src/components/preview/style.scss
@@ -85,7 +85,7 @@
 
     &--iframe {
       #{$mPrefix} {
-        &-runtime--inner {
+        &-runtime-inner {
           overflow: hidden;
         }
       }
@@ -93,7 +93,7 @@
 
     &--self {
       #{$mPrefix} {
-        &-runtime--inner {
+        &-runtime-inner {
           background: #f7f8fa;
         }
       }
