feat: 表单组件增加布局维度，将表单组件提取为公用组件

--- a/packages/dl-common/src/form/style.scss
+++ b/packages/dl-common/src/form/style.scss
@@ -1,6 +1,16 @@
 @import '../style/prefix';
 
 .#{$prefix}-form {
+  .#{$prefix}-cell {
+    background: none;
+  }
+
+  &--has-bg {
+    .#{$prefix}-cell {
+      background: var(--d-cell-background);
+    }
+  }
+
   &__item {
     .#{$prefix}-cell {
       &::after {
