--- a/packages/dl-common/src/style/index.scss
+++ b/packages/dl-common/src/style/index.scss
@@ -8,3 +8,6 @@
 @import '../overlay/style';
 @import '../popup/style';
 @import '../space/style';
+@import '../cell/style';
+@import '../cell-group/style';
+@import '../form/style';
