--- a/packages/dl-ui/src/input/style.scss
+++ b/packages/dl-ui/src/input/style.scss
@@ -2,13 +2,19 @@
 @import '../style/mixins.scss';
 
 .#{$prefix}-input {
+  display: inline-flex;
   width: 100%;
   border: 0;
   caret-color: var(--d-primary);
   @include text-align;
   @include disabled;
 
-  &:-webkit-autofill {
-    background: none;
+  &__inner {
+    flex: 1;
+    margin-right: var(--d-gap-xs);
+    border: 0;
+    &:-webkit-autofill {
+      background: none;
+    }
   }
 }
