fix(Input): 修复输入框提示语颜色不统一问题

--- a/packages/dl-ui/src/input/style.scss
+++ b/packages/dl-ui/src/input/style.scss
@@ -13,6 +13,7 @@
     flex: 1;
     margin-right: var(--d-gap-xs);
     border: 0;
+    @include placeholder;
     &:-webkit-autofill {
       background: none;
     }
