refactor(Cell): 单元格上下布局时，去除左右 padding

--- a/docs/src/assets/style/index.scss
+++ b/docs/src/assets/style/index.scss
@@ -85,7 +85,7 @@ blockquote {
   margin-top: var(--d-gap-sm);
   padding: var(--d-gap-sm);
   border-radius: var(--d-radius-medium);
-  background: var(--d-gray-1) !important;
+  background: #f8f8f8 !important;
   line-height: 1.8;
 }
 
