perf(Cell): 优化单元格上下布局时 padding

--- a/packages/dl-common/src/cell/style.scss
+++ b/packages/dl-common/src/cell/style.scss
@@ -51,8 +51,7 @@
     }
 
     &-vertical {
-      padding-left: 0;
-      padding-right: 0;
+      padding: var(--d-cell-padding) 0 0;
 
       > #{$parent} {
         &__layout {
