feat(Form): 表单增加终端类型参数

--- a/packages/dl-common/src/form/style.scss
+++ b/packages/dl-common/src/form/style.scss
@@ -5,6 +5,14 @@
     background: none;
   }
 
+  &--PC {
+    .#{$prefix}-cell {
+      padding-top: 0;
+      padding-left: 0;
+      padding-right: 0;
+    }
+  }
+
   &--has-bg {
     .#{$prefix}-cell {
       background: var(--d-cell-background);
