fix(LayoutSider): 修复布局侧边栏组件触发器，层级问题

--- a/packages/dl-common/src/layout/style.scss
+++ b/packages/dl-common/src/layout/style.scss
@@ -83,6 +83,7 @@
     &__trigger {
       position: absolute;
       top: 50%;
+      z-index: 9;
       display: inline-flex;
       justify-content: center;
       align-items: center;
