perf: 优化组件文字大小设置规则

--- a/packages/dl-common/src/dialog/style.scss
+++ b/packages/dl-common/src/dialog/style.scss
@@ -8,6 +8,8 @@
 
 .#{$prefix}-dialog {
   $dialogPrefix: &;
+  @include font-size(md);
+
   &--hide-overlay {
     #{$dialogPrefix} {
       &__wrapper {
