--- a/packages/dl-common/src/message/style.scss
+++ b/packages/dl-common/src/message/style.scss
@@ -1,4 +1,5 @@
 @import '../style/prefix';
+@import '../style/mixins';
 
 :root {
   --d-message-padding: var(--d-gap-xs) var(--d-gap-sm);
@@ -17,6 +18,7 @@
 
 .#{$prefix}-message {
   text-align: center;
+  @include font-size(md);
 
   &-enter-active,
   &-leave-active {
