feat: 完善全局配置组件，单元格支持全局配置

--- a/packages/dl-common/src/form/style.scss
+++ b/packages/dl-common/src/form/style.scss
@@ -36,5 +36,9 @@
       vertical-align: middle;
       color: var(--d-error);
     }
+
+    &-colon {
+      margin-inline-start: 3px;
+    }
   }
 }
