feat(Button): 按钮增加链接跳转参数

--- a/packages/dl-common/src/button/style.scss
+++ b/packages/dl-common/src/button/style.scss
@@ -197,6 +197,10 @@
     &#{$prefix}--theme {
       &-default {
         color: var(--d-primary-text-color);
+
+        &:hover {
+          color: var(--d-primary);
+        }
       }
 
       &-primary {
