--- a/packages/dl-common/src/overlay/style.scss
+++ b/packages/dl-common/src/overlay/style.scss
@@ -8,9 +8,9 @@
 .#{$prefix}-overlay {
   position: fixed;
   top: 0;
+  right: 0;
+  bottom: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
   background-color: var(--d-overlay-bg-color);
   transition: background-color 0.8s;
 
