--- a/packages/dl-common/src/button/style.scss
+++ b/packages/dl-common/src/button/style.scss
@@ -245,21 +245,26 @@
   &--theme {
     &-primary {
       --d-button-wave: var(--d-primary-1);
+      --d-button-wave-bg: var(--d-primary-8);
     }
     &-success {
-      --d-button-wave: var(--d-success-bg);
+      --d-button-wave: var(--d-success-1);
+      --d-button-wave-bg: var(--d-success-8);
     }
     &-warning {
-      --d-button-wave: var(--d-warning-bg);
+      --d-button-wave: var(--d-warning-1);
+      --d-button-wave-bg: var(--d-warning-8);
     }
     &-danger {
-      --d-button-wave: var(--d-error-bg);
+      --d-button-wave: var(--d-error-1);
+      --d-button-wave-bg: var(--d-error-8);
     }
   }
 }
 
 @keyframes button-wave-spread {
   from {
+    background-color: var(--d-button-wave-bg);
     box-shadow: 0 0 0.5px 0 var(--d-button-wave);
   }
   to {
