--- a/docs/src/components/preview/style.scss
+++ b/docs/src/components/preview/style.scss
@@ -9,7 +9,6 @@
     margin: var(--d-gap-sm) 0 40px;
     box-shadow: 0 10px 24px rgba(9, 16, 30, 0.04), 0px 6px 40px rgba(9, 16, 30, 0.08);
     border-radius: 8px;
-    background-color: #fff;
 
     &:empty {
       display: none;
@@ -24,6 +23,7 @@
     .shiki {
       margin-top: 0;
       background: none !important;
+      border: 0;
     }
   }
 
