refactor(Button): 优化按钮组件动画效果

--- a/packages/dl-common/src/button/style.scss
+++ b/packages/dl-common/src/button/style.scss
@@ -10,10 +10,13 @@
 .#{$prefix}-button {
   $prefix: &;
   --d-button-wave: var(--d-primary-1);
+  --d-button-wave-bg: var(--d-gray-1);
   position: relative;
+  z-index: 1;
   display: inline-block;
   box-sizing: border-box;
   border: var(--d-border);
+  overflow: hidden;
   cursor: pointer;
 
   &::before {
@@ -24,7 +27,17 @@
     right: 0;
     bottom: 0;
     left: 0;
-    border-radius: inherit;
+  }
+
+  &::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    width: 0;
+    height: 200%;
+    background-color: var(--d-button-wave-bg);
   }
 
   &--block {
@@ -33,7 +46,11 @@
   }
 
   &--active {
-    animation: button-wave-spread 0.35s cubic-bezier(0, 0, 0.2, 1);
+    animation: button-wave-spread 0.25s cubic-bezier(0, 0, 0.2, 1);
+
+    &::after {
+      animation: button-bg 0.2s ease-in-out;
+    }
   }
 
   // 形状
@@ -123,6 +140,7 @@
         }
 
         &-primary {
+          --d-button-wave-bg: var(--d-gray-1);
           border-color: var(--d-primary);
           color: var(--d-primary);
 
@@ -132,6 +150,7 @@
         }
 
         &-success {
+          --d-button-wave-bg: var(--d-gray-1);
           border-color: var(--d-success);
           color: var(--d-success);
 
@@ -141,6 +160,7 @@
         }
 
         &-warning {
+          --d-button-wave-bg: var(--d-gray-1);
           border-color: var(--d-warning);
           color: var(--d-warning);
 
@@ -150,6 +170,7 @@
         }
 
         &-danger {
+          --d-button-wave-bg: var(--d-gray-1);
           border-color: var(--d-error);
           color: var(--d-error);
 
@@ -245,29 +266,37 @@
   &--theme {
     &-primary {
       --d-button-wave: var(--d-primary-1);
-      --d-button-wave-bg: var(--d-primary-8);
+      --d-button-wave-bg: var(--d-primary-7);
     }
     &-success {
       --d-button-wave: var(--d-success-1);
-      --d-button-wave-bg: var(--d-success-8);
+      --d-button-wave-bg: var(--d-success-7);
     }
     &-warning {
       --d-button-wave: var(--d-warning-1);
-      --d-button-wave-bg: var(--d-warning-8);
+      --d-button-wave-bg: var(--d-warning-7);
     }
     &-danger {
       --d-button-wave: var(--d-error-1);
-      --d-button-wave-bg: var(--d-error-8);
+      --d-button-wave-bg: var(--d-error-7);
     }
   }
 }
 
 @keyframes button-wave-spread {
   from {
-    background-color: var(--d-button-wave-bg);
-    box-shadow: 0 0 0.5px 0 var(--d-button-wave);
+    box-shadow: 0 0 0.3px 0 var(--d-button-wave);
   }
   to {
-    box-shadow: 0 0 0.5px 5px var(--d-button-wave);
+    box-shadow: 0 0 0.3px 3px var(--d-button-wave);
+  }
+}
+
+@keyframes button-bg {
+  from {
+    width: 0;
+  }
+  to {
+    width: 120%;
   }
 }
