refactor(Form): 调整表单校验提示和描述样式

--- a/packages/dl-common/src/form/style.scss
+++ b/packages/dl-common/src/form/style.scss
@@ -32,13 +32,20 @@
     }
 
     &-requiredMark {
-      margin-left: var(--d-gap-xxs);
       vertical-align: middle;
       color: var(--d-error);
     }
 
     &-colon {
       margin-inline-start: 3px;
+    }
+
+    &-description {
+      margin-top: var(--d-gap-xs);
+      font-size: var(--d-font-size-sm);
+      line-height: var(--d-line-height-xs);
+      color: var(--d-secondary-text-color);
+      white-space: pre-wrap;
     }
   }
 }
