fix(Message): 修复消息提示组件图标未对齐，容器未撑满问题

--- a/packages/dl-common/src/message/style.scss
+++ b/packages/dl-common/src/message/style.scss
@@ -13,6 +13,8 @@
   top: 0;
   left: 50%;
   z-index: 999999;
+  width: 100%;
+  max-width: 90%;
   transform: translateX(-50%);
 }
 
@@ -58,5 +60,9 @@
 
   &__closable {
     cursor: pointer;
+  }
+
+  .#{$prefix}-icon {
+    height: 100%;
   }
 }
