--- a/packages/dl-ui/src/calendar/style.scss
+++ b/packages/dl-ui/src/calendar/style.scss
@@ -62,6 +62,9 @@
 
   &__month {
     &-title {
+      position: sticky;
+      top: 0;
+      background-color: var(--d-white-color);
       @include font-size(lg);
     }
   }
